chore: [losdev-2] migrated to a modules based project and created the home page

--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+/* Colors */
+$dark_green: #2C6E49;
+$sea_green: #4C956C;
+$light_yellow: #FEFEE3;
+$melon: #FFC9B9;
+$persian_orange: #D68C45;
