--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -5,3 +5,5 @@ $sea_green: #4C956C;
 $light_yellow: #FEFEE3;
 $melon: #FFC9B9;
 $persian_orange: #D68C45;
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
