--- a/portfolio/src/app/pages/pages/components/home/home.component.html
+++ b/portfolio/src/app/pages/pages/components/home/home.component.html
@@ -1,1 +1,5 @@
-<h1>home works!</h1>
+<mat-tab-group class="nav-tabs" mat-stretch-tabs="false" mat-align-tabs="start">
+    <mat-tab class="nav-tab" label="Home"></mat-tab>
+    <mat-tab class="nav-tab" label="Skills"></mat-tab>
+    <mat-tab class="nav-tab" label="Projects"></mat-tab>
+  </mat-tab-group>
